(Feat): Create a version system

--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Set up Git
         run: |
-          git config --global user.name 'Arch881010'
-          git config --global user.email 'arch1010@pm.me'
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Get version number
         id: get_version
